agrega escribir archivos y ejercicios

--- a/01_Python_C.ipynb
+++ b/01_Python_C.ipynb
@@ -67,12 +67,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Al igual que con las listas, no es necesario crear un diccionario vacío y luego agregar valores, podríamos haber creado el diccionario de forma directa. En el siguiente ejemplo tenemos los nombres de 5 ciudades y sus poblaciones."
+    "Al igual que con las listas, no es necesario crear un diccionario vacío y luego agregar valores, podríamos haber creado el diccionario de forma directa. En el siguiente ejemplo tenemos los nombres de 5 distritos y sus poblaciones."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -101,7 +101,7 @@
        "3304825"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -128,7 +128,7 @@
        "False"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -157,7 +157,7 @@
        "True"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -215,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -4414,7 +4414,13 @@
       "\n",
       "CESAR;M;LATINO;S/S\n",
       "\n",
-      "CESARAUGUSTANUS;M;S/O;S/S\n",
+      "CESARAUGUSTANUS;M;S/O;S/S\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "\n",
       "CESARE;M;S/O;S/S\n",
       "\n",
@@ -5063,7 +5069,13 @@
       "CRISTEL;F;S/O;S/S\n",
       "\n",
       "CRISTELA;F;S/O;S/S\n",
-      "\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "CRISTELLE;F;S/O;S/S\n",
       "\n",
       "CRISTETA;F;S/O;S/S\n",
@@ -5979,13 +5991,7 @@
       "DULCE MARIA;F;S/O;S/S\n",
       "\n",
       "DULCEA;F;S/O;S/S\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "\n",
       "DULCIDIO;M;LATINO;\"BAJO LATIN \"\"DULCIDIO\"\", DE DULCISDULCE, SAN DULCIDIO, OBISPO DE AGEN EN FRANCIA (SIGLO VII)\"\n",
       "\n",
       "DULCINEA;F;LATINO;\"DEL LATIN \"\"DULCIS\"\"DULCE, QUE TIENE DULZU-RA\"\n",
@@ -9068,7 +9074,13 @@
       "\n",
       "HUEY;M;S/O;S/S\n",
       "\n",
-      "HUGH;M;S/O;S/S\n",
+      "HUGH;M;S/O;S/S\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "\n",
       "HUGO;M;GERMANICO;S/S\n",
       "\n",
@@ -10067,7 +10079,13 @@
       "JOVITA;F;LATINO;\"TAL VEZ RELACIONADO CON \"\"IOVIS\"\", RELATIVOA JUPITER\"\n",
       "\n",
       "JOY;F;S/O;S/S\n",
-      "\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "JOYCE;F;S/O;S/S\n",
       "\n",
       "JOYCE;F;S/O;S/S\n",
@@ -10254,13 +10272,7 @@
       "\n",
       "KALEI;F;S/O;S/S\n",
       "\n",
-      "KALEN;A;S/O;S/S\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "KALEN;A;S/O;S/S\n",
       "\n",
       "KALENA;F;S/O;S/S\n",
       "\n",
@@ -14072,7 +14084,13 @@
       "\n",
       "NICOMEDES;M;GRIEGO;EL QUE PREPARA LA VICTORIA\n",
       "\n",
-      "NICON;M;GRIEGO;EL VICTORIOSO\n",
+      "NICON;M;GRIEGO;EL VICTORIOSO\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "\n",
       "NICOSTRATO;M;GRIEGO;EL GENERAL QUE CONDUCE A LA VICTORIA\n",
       "\n",
@@ -16071,7 +16089,13 @@
       "RILEY;A;S/O;S/S\n",
       "\n",
       "RIMCA;F;S/O;S/S\n",
-      "\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "RIMON;M;S/O;S/S\n",
       "\n",
       "RINA;F;S/O;S/S\n",
@@ -16259,13 +16283,7 @@
       "ROQUE;M;S/O;S/S\n",
       "\n",
       "ROQUINA;F;S/O;S/S\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "\n",
       "RORI;F;S/O;S/S\n",
       "\n",
       "RORY;A;S/O;S/S\n",
@@ -19905,7 +19923,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -22004,7 +22022,13 @@
       "CEREAL\n",
       "CERELIA\n",
       "CERES\n",
-      "CERISE\n",
+      "CERISE\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "CERNE\n",
       "CESAR\n",
       "CESARAUGUSTANUS\n",
@@ -22774,13 +22798,7 @@
       "DRUSILLA\n",
       "DRUSO\n",
       "DUAM\n",
-      "DUBIEL\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "DUBIEL\n",
       "DUDLEY\n",
       "DUENA\n",
       "DUFF\n",
@@ -24009,7 +24027,13 @@
       "GUMERSINDO\n",
       "GUNDELBERTO\n",
       "GUNDELINA\n",
-      "GUNDENA\n",
+      "GUNDENA\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "GUNIFORTE\n",
       "GUNNAR\n",
       "GUNTERO\n",
@@ -25508,7 +25532,13 @@
       "LIBRADA\n",
       "LICALEL\n",
       "LICERIA\n",
-      "LICERIO\n",
+      "LICERIO\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "LICIA\n",
       "LICINA\n",
       "LICINIO\n",
@@ -25709,13 +25739,7 @@
       "LUIGI\n",
       "LUIS\n",
       "LUIS GONZAGA\n",
-      "LUISA\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "LUISA\n",
       "LUISANA\n",
       "LUISE\n",
       "LUISELLA\n",
@@ -27014,7 +27038,13 @@
       "ODINO\n",
       "ODO\n",
       "ODOLF\n",
-      "ODON\n",
+      "ODON\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "ODRAN\n",
       "OFEK\n",
       "OFELIA\n",
@@ -28285,13 +28315,7 @@
       "SERVIO\n",
       "SERVO\n",
       "SERVODEI\n",
-      "SERVODEO\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "SERVODEO\n",
       "SERVULO\n",
       "SERWA\n",
       "SET\n",
@@ -28519,7 +28543,13 @@
       "SMITH\n",
       "SOBEL\n",
       "SOCORRO\n",
-      "SOCRATES\n",
+      "SOCRATES\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "SOFIA\n",
       "SOFIEL\n",
       "SOFOCLES\n",
@@ -29771,30 +29801,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Escribir una función que tome los nombres en \"nombres-permitidos.csv\" y los almacene como claves (_key_) en un diccionario. Cómo valores usen el valor en la columna sezo.\n",
-    "\n",
-    "\n",
-    "```python\n",
-    "archivo = open('datos/nombres-permitidos.csv')\n",
-    "\n",
-    "nombres = {}\n",
-    "for linea in archivo.readlines()[1:]:\n",
-    "    nombre, sexo, *_ = linea.split(';')\n",
-    "    nombres[nombre] = sexo\n",
-    "```"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    " ejercicios http://greenteapress.com/thinkpython/html/thinkpython010.html#toc99"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "### Frecuencias\n",
     "\n",
     "En el notebook anterior vimos como crear una función llamada `frecuencia` que nos permitía contar cuantas veces aparecía un determinado caracter en un cadena. Ahora vamos a ver una versión alternativa de esa función. Esta vez usando diccionarios."
@@ -29802,7 +29808,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29818,7 +29824,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29836,7 +29842,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -29845,7 +29851,7 @@
        "{1: 1, 2: 2, 3: 1, 4: 1, 5: 1}"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -29864,7 +29870,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -29908,7 +29914,7 @@
        " 'Ë': 1}"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -29926,7 +29932,60 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "http://greenteapress.com/thinkpython/html/thinkpython012.html"
+    "## Escritura de archivos\n",
+    "\n",
+    "Podemos usar `open` para escribir archivos en ese caso deberemos especificar el nombre del archivo como una `cadena` y que el archivo está en modo _escritura_ esto se hace con la `w` (del ingles _**w**rite_) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fd = open('población.csv', 'w')  # abrimos el archivo\n",
+    "\n",
+    "for clave, valor in pob.items():\n",
+    "    fd.write(f'{clave}, {valor}\\n')  # escribimos el contenido del archivo linea por liena\n",
+    "fd.close()  # cerramos el archivo"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Cerrar un archivo es una buena costumbre ya que no hay garatías de que Python lo haga por nosotros. Un archivo abierto cuando ya no es necesario implica un gasto innecesario de la memoria de nuestra computadora. Una sintaxis alternativa (y la recomendada) para abrir archivos es usar la sentencia `with` de la siguiente forma:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('población.csv', 'w') as fd:  # abrimos el archivo\n",
+    "    for clave, valor in pob.items():\n",
+    "        fd.write(f'{clave}, {valor}\\n')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Una de las ventajas de usar `with` es que se asegura de cerrar el archivo una vez que salimos del bloque `with`."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Ejercicios\n",
+    "\n",
+    "1. Escribir una función que tome los nombres en \"nombres-permitidos.csv\" y los almacene como claves (_key_) en un diccionario. Cómo valores usen el valor en la columna `sexo`.\n",
+    "\n",
+    "1. Crear una función llamada `tiene_duplicados` que determine si una secuencia contiene elementos repetidos\n",
+    "\n",
+    "2. Necesitamos devolver los valores en un diccionario, pero según las claves ordenadas alfabéticamente. tip: Python incluye una función llamada `sorted`. Y si quisiéramos en orden alfabético inverso?"
    ]
   }
  ],
